crates/alder-parse/src/expression/snapshots/alder_parse__expression__loop___tests__error_loop_missing_block.snap
---
source: crates/alder-parse/src/expression/loop_.rs
description: loop x
---
Loop(
    Open(
        1,
        6,
    ),
    1,
    1,
)
