crates/alder-parse/src/expression/snapshots/alder_parse__expression__loop___tests__error_state_no_parens.snap
---
source: crates/alder-parse/src/expression/loop_.rs
description: state 0
---
State(
    Open(
        1,
        7,
    ),
    1,
    1,
)
