crates/alder-parse/src/expression/snapshots/alder_parse__expression__loop___tests__error_state_paren_next_line.snap
---
source: crates/alder-parse/src/expression/loop_.rs
description: "state\n(0)\n"
---
State(
    Open(
        1,
        6,
    ),
    1,
    1,
)
