crates/alder-parse/src/expression/snapshots/alder_parse__expression__loop___tests__loop_break_value.snap
---
source: crates/alder-parse/src/expression/loop_.rs
description: "loop {\n    let next = iter.next()\n    if matches(next) { break next }\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Loop(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 4,
                    column: 2,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 27,
                            },
                        },
                        value: Let(
                            LetDecl {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 13,
                                        },
                                    },
                                    value: Var(
                                        "next",
                                    ),
                                },
                                annotation: None,
                                value: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 27,
                                        },
                                    },
                                    value: Call {
                                        function: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 25,
                                                },
                                            },
                                            value: Access {
                                                record: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 20,
                                                        },
                                                    },
                                                    value: Var(
                                                        "iter",
                                                    ),
                                                },
                                                field: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 2,
                                                            column: 21,
                                                        },
                                                        end: Position {
                                                            line: 2,
                                                            column: 25,
                                                        },
                                                    },
                                                    value: "next",
                                                },
                                            },
                                        },
                                        arguments: [],
                                    },
                                },
                            },
                        ),
                    },
                ],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 36,
                            },
                        },
                        value: If {
                            branches: [
                                IfBranch {
                                    condition: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 21,
                                            },
                                        },
                                        value: Call {
                                            function: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 3,
                                                        column: 8,
                                                    },
                                                    end: Position {
                                                        line: 3,
                                                        column: 15,
                                                    },
                                                },
                                                value: Var(
                                                    "matches",
                                                ),
                                            },
                                            arguments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 20,
                                                        },
                                                    },
                                                    value: Var(
                                                        "next",
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                    body: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 36,
                                            },
                                        },
                                        value: Block {
                                            stmts: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 24,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 34,
                                                        },
                                                    },
                                                    value: Break(
                                                        Some(
                                                            Located {
                                                                region: Region {
                                                                    start: Position {
                                                                        line: 3,
                                                                        column: 30,
                                                                    },
                                                                    end: Position {
                                                                        line: 3,
                                                                        column: 34,
                                                                    },
                                                                },
                                                                value: Var(
                                                                    "next",
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ],
                                            tail: None,
                                        },
                                    },
                                },
                            ],
                            final_else: None,
                        },
                    },
                ),
            },
        },
    ),
}
