crates/alder-parse/src/expression/snapshots/alder_parse__expression__loop___tests__loop_nested.snap
---
source: crates/alder-parse/src/expression/loop_.rs
description: "loop {\n    loop {\n        break\n    }\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Loop(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 5,
                    column: 2,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 4,
                                column: 6,
                            },
                        },
                        value: Loop(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 6,
                                    },
                                },
                                value: Block {
                                    stmts: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 9,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 14,
                                                },
                                            },
                                            value: Break(
                                                None,
                                            ),
                                        },
                                    ],
                                    tail: None,
                                },
                            },
                        ),
                    },
                ),
            },
        },
    ),
}
